# control_zone

./: Cargo.toml  README.md
Biblio/: ref.bib
Tex/: Appendix.tex  Backmatter.tex  Chap_01_introduction.tex  Chap_02_theories_tech.tex  Chap_03_profiling.tex  Chap_04_control_zone.tex  Chap_04_sched_policy.tex  Chap_05_control_zone.tex  Chap_05_sched_policy.tex  Chap_06_exp.tex  Chap_07_conclusion.tex  Chap_conclusion.tex  Chap_control_zone.tex  Chap_introduction.tex  Chap_sched_policy.tex  Chap_theories_tech.tex  Frontinfo.tex  Frontmatter.tex  Mainmatter.tex  Prematter.tex
crates/chsd/: Cargo.toml
crates/chsd/src/: main.rs
crates/czctrl/: Cargo.toml
crates/czctrl/src/: config.rs  control_zone.rs  main.rs  vruntime.rs
crates/czctrl/src/commands/: apply.rs  conn.rs  create.rs  down.rs  generate.rs  inspect.rs  list.rs  log.rs  mod.rs  observe.rs  remove.rs  start.rs  stop.rs  update.rs
crates/czctrl/src/controlzone/: czos.rs  meta.rs  mod.rs  resource.rs  state.rs  test.rs  util.rs
crates/czctrl/src/pod/: add.rs  delete.rs  mod.rs  show.rs
crates/czctrl/src/vruntime/: libvirt.rs  mod.rs
crates/czdaemon/: Cargo.toml
crates/czdaemon/src/: guest.rs  info.rs  main.rs  watcher.rs  worker.rs
crates/libbpfmap/: Cargo.toml  build.rs
crates/libbpfmap/src/: lib.rs
crates/libcz/: Cargo.toml
crates/libcz/src/: czos.rs  lib.rs  meta.rs  resource.rs  state.rs  test.rs  vruntime.rs
crates/libutil/: Cargo.toml
crates/libutil/src/: kvm.rs  lib.rs  process.rs
crates/libvm/: Cargo.toml
crates/libvm/src/: lib.rs  libvirt.rs  qemu.rs  test.rs  virt.rs
