[package]
name = "czctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
libvm = { path = "../libvm" }
libutil = { path = "../libutil" }
libbpfmap = { path = "../libbpfmap" }
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.2"
serde_yaml = "0.9.32"
