[package]
name = "czdaemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
poll_watcher = []
default = ["poll_watcher"]

[dependencies]
libcz = {path = "../libcz"}
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.2"
nix = {version = "0.28.0", features = ["net"]}
notify = "6.1.1"
clap = { version = "4.5.1", features = ["derive"] }
signal-hook = "0.3.17"