[package]
name = "libcz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
log = "0.4.21"
strum = { version = "0.21.0", features = ["derive"] }
notify = "6.1.1"